# todo-rust-redis

./: Cargo.toml  README.md  docker-compose.yaml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
src/: main.rs  todo.rs
web/: .eslintrc.js  Dockerfile  package-lock.json  package.json
web/src/: App.test.tsx  App.tsx
web/src/@types/: global.d.ts
web/src/components/: ToDo.test.tsx  ToDo.tsx  ToDoItem.test.tsx  ToDoItem.tsx  ToDoList.test.tsx  ToDoList.tsx
