[package]
name = "todo-rust-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.2"
actix-web = "4"
serde = { version = "1.0.152", features = [ "derive" ] }
rand = "0.8.5"
actix-cors = "0.6.4"
